--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,8 +15,7 @@ img.logo_background {
     left: 0%;
 }
 
-img.logo_background:empty
-{
+img.logo_background:empty {
     top: 0%;
     left: 50%;
     -webkit-transform: translate(-50%, 0%);
@@ -49,11 +48,20 @@ img.logo_background:empty
     z-index: 1000;
 }
 
+#node_layers_container {
+    position: relative;
+}
+
 .svg_content { 
     display: inline-block;
     position: absolute;
     top: 0;
     left: 0;
+}
+
+.node_layer_container {
+    display: block;
+    position: absolute;
 }
 
 .main, .contact {
